--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -11,6 +11,14 @@
         margin-top: 50px;
         display: flex;
         justify-content: space-around;
+
+        @media(max-width: 768px){
+            display: block;
+        }
+
+        .button{
+            margin-top: 24px;
+        }
         &__item{
             padding: 60px 44px 44px;
             text-align: center;
