--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -11,6 +11,11 @@
         gap: 24px;
         margin-top: 44px;
 
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+
+        }
+
         &__item {
             img {
                 max-width: 100%;
@@ -27,6 +32,12 @@
         display: flex;
         justify-content: center;
 
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px ;
+        }
+
         &__button {
             color: variaveis.$cortextosecundario;
             font-size: 20px;
@@ -36,6 +47,10 @@
             background: none;
             text-transform: uppercase;
             margin: 0 1vw;
+
+            @media (max-width: 768px) {
+                font-size: 16px;
+            }
 
             &--is-active {
                 border-bottom: 5px solid variaveis.$cortextosecundario;
