--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $cortextoprincipal: silver;
 $cortextosecundario: #f9f9f9;
 $cordefundo: #040714;
+$botaocorprimaria:#6421ff;
+$botaocorsecundario: #0063e5;
+$botaocordark: #000;
